<resources>
    <string name="app_name">Математически задачи</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Помощ</string>
    <string name="action_about">Относно</string>
    <string name="title_activity_exam_1">Състезание</string>
    <string name="title_activity_competitions_name">Състезания</string>
    <string name="title_result_buttons">Отговор</string>
    <string name="exam1Problem1">Кое число има 1 десетица и 10 единици?</string>
    <string name="exam1Problem2">1+2+3=?</string>
    <string name="exam1Problem3">Колко яйца има в кошницата?</string>
    <string name="exam1Problem4">4 ? 5=15 ? 6</string>
    <string name="exam1Problem5">С кои числа ще продължиш числовата редица 1,4,7,10,...,...,...?</string>
    <string name="exam1Problem6">В коя група числа са верните отговори на задачите? \n 8-6= \u0020  13-5=  \u0020 17-6=</string>
    <string name="exam1Problem7">В коя група всички сборове са равни на 11?</string>
    <string name="exam1Problem8">Калина знае 15 стихотворения наизуст, а Милен 8. Кой знае повече стихотворения и с колко?</string>
    <string name="exam1Problem9">Коя от малките фигури е извадена от голямата фигура?</string>
    <string name="exam1Problem10">Колко са триъгълниците на фигурата?</string>
    <string name="exam1Problem11">Емилия купила панделка. Имала 8 кукли.Колко разрязвания трябва да направи, за да отреже панделка за нея и куклите и?</string>
    <string name="exam1Problem12">В кошницата имало яйца. Първо взели 6 от тях после добавили 2. Как се е променил техният брой и с колко?</string>
    <string name="exam1Problem13">0,2,3,6,8,9. Намерете:</string>
    <string name="exam1Problem14">Една книга има 20 страници. Петя прочела няколко от тях. Ако прочете още 2 ,ще и останат още 9 страници. Колко страници и остават да прочете?</string>
    <string name="exam1Problem15">Къде всички знаци  \u003c , \u003e или = са поставени правилно?</string>
    <string name="exam1Answer1"> A:  10 \u0020 Б:  11 \u0020 В: 12  \u0020 Г:  20</string>
    <string name="exam1Answer2"> A:  8 \u0020   Б:  6 \u0020  В: 4  \u0020  Г:  3</string>
    <string name="exam1Answer3"> A:  9 \u0020   Б:  10 \u0020 В: 12 \u0020  Г:  11</string>
    <string name="exam1Answer4">A: + и -
                            \n Б: + и +
                            \n В: - и +
                             \n Г: - и -</string>
    <string name="exam1Answer5">A: 11,12,13
                            \n Б: 13,15,17
                            \n В: 13,16,19
                            \n Г: 12,15,18</string>
    <string name="exam1Answer6">
                               A: 2,8,11
                            \n Б: 2,9,12
                            \n В: 3,8,12
                            \n Г: 2,8,10</string>
    <string name="exam1Answer7">A: 2+9;  8+2; 8+3
                            \n Б: 5+6;  2+8; 3+8
                            \n В: 6+6;  8+4; 7+4
                            \n Г: 7+4;  8+3; 6+5 </string>
    <string name="exam1Answer8"> A: Калина знае 23 стихотворения повече
                            \n Б: Калина знае 7 стихотворения повече
                            \n В: Милен знае 7 стихотворения повече
                            \n Г: Милен знае 15 стихотворения повече</string>
    <string name="exam1Answer9"></string>
    <string name="exam1Answer10">  A: 13 \u0020 Б: 17 \u0020 В: 15 \u0020 Г: 14</string>
    <string name="exam1Answer11"> A: 10 \u0020 Б: 9 \u0020 В: 7 \u0020 Г: 8 </string>
    <string name="exam1Answer12">A: увеличил се е с 2
                            \n Б: намалил се е с 4
                            \n В: не се е променил
                            \n Г: увеличил се е с 4</string>
    <string name="exam1Answer13">
        ( 1 + 4 + 7 = 12 )
       \n\n A: 10 \u0020 Б: 7 \u0020 В: 4 \u0020 Г: 1 </string>
    <string name="exam1Answer14">A: остават и 19 страници
                            \n Б: остават и 9 страници
                            \n В: остават и 11 страници
                            \n Г: остават и 10 страници</string>
    <string name="exam1Answer15">

                             A: 12см \u003c 5см + 7см
                            \n 16кг \u003e 6кг + 10кг
                            \n 4лв = 13лв - 8лв
                            \n \nБ: 9см + 7см = 17см
                            \n 16лв + 6лв \u003c 11лв
                            \n 16лв + 4лв \u003e 16лв
                            \n \n В: 18см - 5см = 7см + 6см
                            \n 18кг - 7кг \u003e 18кг - 8кг
                            \n 7лв - 4лв \u003e 7лв = 4лв
                            \n \n Г: 1см \u003c 15см - 13см
                            \n 18лв = 10лв + 8лв
                            \n 12кг \u003e 19кг - 12кг
    </string>
    <string name="exam2Problem1">Пропуснатите числа са:\n ? +  4 + 2 = 11 \n 12 – 6 + ? = 7 \n 15 = 5 + 4 + ? </string>
    <string name="exam2Problem2">На колко е равно:\n 5 – 3 + 5 – 3 + 5 – 3 + 5 – 3 + 5 – 3 </string>
    <string name="exam2Problem3">При съставяне на задача с действие “изваждане” с числата 4, 12 и 16, кое от тях е умаляемото? </string>
    <string name="exam2Problem4">Колко още кръгчета трябва да постави във фигурката си Венци, за да се получи равенството:</string>
    <string name="exam2Problem5">Вили тренира баскетбол в дните сряда и петък, от 3 часа до 5 часа следобед. Колко часа тренира всяка седмица? </string>
    <string name="exam2Problem6">Записани са числата от 1 до 16. Колко пъти е записана цифрата 1? </string>
    <string name="exam2Problem7">Мама прави курабийки за празника с четири фигурки в тази последователност.Каква ще бъде 18-та курабийка?</string>
    <string name="exam2Problem8">Наименованията на колко различни числа откривате сред думите на изречението: Петко реже с трион, а Петя разглежда картинка на еднорог. </string>
    <string name="exam2Problem9">В колко триъгълника има кръгче: </string>
    <string name="exam2Problem10">Венелина откъснала 6 кокичета и 6 минзухара. От всичките цветя подарила на майка си 7, а останалите на баба си. Букет от колко цветя е получила бабата на Венелина? </string>
    <string name="exam2Problem11">Маймунката Мио играе с три карти, на които са написани букви. Подрежда ги и получава различни трибуквени редички. Колко най-много различни редички ще получи маймунката Мио? </string>
    <string name="exam2Problem12">Ако поставете знаците  +  и  -  между яйчицата, така че сборът да е равен на 20,
    колко пъти ще изпозвате знака + ?</string>
    <string name="exam2Problem13">По колко начина може да се представи числото 11 като сбор от три различни събираеми?</string>
    <string name="exam2Problem14">В редицата от записани числа има групи от 2 или 3 съседни числа, които имат
сбор 13.
    \n
    \n 1,13,6,7,2,6,4,3,10,2,1
    \n
    \n Колко такива сбора открихте?</string>
    <string name="exam2Problem15">Попълнете занимателната рамка с различни цифри, така че хоризонталните и вертикални сборове да са равни на числото
в центъра. Ако цифрите в рамката се подредят във възходящ ред, коя е петата по големина цифра?</string>
     <string name="exam2Answer1">A: 5 , 1, 6
                            \n Б: 5, 11, 6
                            \n В: 6, 1, 6
                            \n Г: 5, 1, 7 </string>
    <string name="exam2Answer2"> A:  10 \u0020 Б:  2 \u0020 В: 13  \u0020 Г:  11</string>
    <string name="exam2Answer3"> A:  4 \u0020 Б:  8 \u0020 В: 12  \u0020 Г:  16</string>
    <string name="exam2Answer4"> A:  1\u0020 Б:  2 \u0020 В: 3  \u0020 Г:  4</string>
    <string name="exam2Answer5"> A: 14ч. \u0020 Б:  10ч. \u0020 В: 4ч.  \u0020 Г:  2ч.</string>
    <string name="exam2Answer6"> A:  8 \u0020 Б:  9 \u0020 В: 10  \u0020 Г:  12</string>
    <string name="exam2Answer7"></string>
    <string name="exam2Answer8"> A:  1 \u0020 Б:  2 \u0020 В: 3  \u0020 Г:  4</string>
    <string name="exam2Answer9"> A:  2 \u0020 Б:  4 \u0020 В: 6  \u0020 Г:  12</string>
    <string name="exam2Answer10"> A:  5 \u0020 Б:  6 \u0020 В: 7  \u0020 Г:  12</string>
    <string name="exam2Answer11"> A:  8 \u0020 Б:  6 \u0020 В: 4  \u0020 Г:  3</string>
    <string name="exam2Answer12"> A: 4 \u0020 Б: 3 \u0020 В: 2  \u0020 Г:  1</string>
    <string name="exam2Answer13"> A:  14 \u0020 Б:  12 \u0020 В: 10  \u0020 Г:  5</string>
    <string name="exam2Answer14"> A:  5 \u0020 Б:  4 \u0020 В: 3  \u0020 Г: 2</string>
    <string name="exam2Answer15"> A:  5 \u0020 Б:  6 \u0020 В: 4  \u0020 Г: 16</string>
    <string name="exam3Problem1">В кой ред са записани числата между 14 и 19? </string>
    <string name="exam3Problem2">В коя от групите пропуснатите числа са по малки от най-малкото двуцифрено число? </string>
    <string name="exam3Problem3">Пропуснатите числа в редицата  0,3,6,...,...,15 са:</string>
    <string name="exam3Problem4">Разликата 16 - 8 е равна на: </string>
    <string name="exam3Problem5">Баба Велика боядисала 14 червени и 5 зелени яйца. С колко червените яйца са повече от зелените? </string>
    <string name="exam3Problem6">Ако поставете знаците + и - между цифрите \n 2 3 4 5 6 = 12,\n за да получите вярно равенството,
   \n между цифрите 3 и 4, 4 и 5 кой знаци ще поставите?</string>
    <string name="exam3Problem7">Колко фигурки най малко трябва да махнем,за да останат фигурки само от един вид? </string>
    <string name="exam3Problem8">Мама купила банани. Изядохме с Краси по един и останаха повече с 3 от изядените. Колко банани е купила мама? </string>
    <string name="exam3Problem9">Деца играят с топка, въжета и обръчи, като всяко играе само с един уред. Три деца не играят с топки и въжета,
     6 деца не играят с обръчи и топки, 7 деца не играят с въжета и обръчи. Колко са всичките деца?</string>
    <string name="exam3Problem10">Колко са правоъгълниците на чертежа? </string>
    <string name="exam3Problem11">Числата 5,6,7,8,9,10,11,12 трябва да се поставят по един път в кръгчетата така, че сборът на
    двете числа на всяка права линия да е един и същ. Някои от тях вече са поставени. Кое число стои в тъмното кръгче? </string>
    <string name="exam3Problem12">Колко яйца трябва да има на мястото на въпросителния знак? </string>
    <string name="exam3Problem13">Вили и Венци започнали да оцветяват редичка от великденски зайчета, едновременно от двата и края.
    Вили оцветила 6 зайчета, които са с 5 по малко от оцветените от Венци. Останали 2 неоцветени зайчета. Колко са всички зайчета?</string>
    <string name="exam3Problem14">Ваня подредила по големина 5 пръчици, така че всяка следваща е с 2 см. по-дълга. Измерила най-дългата, тя била 9 см.
    Каква е дължината на третата пръчица?</string>
    <string name="exam3Problem15">Квадратът е магически(сборът по редове колони и диагонали е един и същ). Колко е сумата на липсващите числа?</string>
    <string name="exam3Answer1">A: 10, 11, 12, 13
                            \n Б: 14, 15, 16, 17
                            \n В: 15, 16, 17, 18
                            \n\n Г: 17, 18, 19, 20</string>
    <string name="do_you_want_exit_app">Наистина ли искате да излезете от приложението?</string>
    <string name="exit">Изход</string>
    <string name="no">Отказ</string>
    <string name="_23_04_2016">Великденско математическо състезание 23.04.2016</string>
    <string name="_18_04_2015">Великденско математическо състезание 18.04.2015</string>
    <string name="_12_04_2014">Великденско математическо състезание 12.04.2014</string>
    <string name="_20_04_2013">Великденско математическо състезание 20.04.2013</string>
    <string name="_22_04_2012">Великденско математическо състезание 22.04.2012</string>
    <string name="_16_04_2011">Великденско математическо състезание 16.04.2011</string>
    <string name="_24_04_2010">Великденско математическо състезание 24.04.2010</string>
    <string name="_12_04_2008">Великденско математическо състезание 12.04.2008</string>
</resources>