<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:id="@+id/liteBottom"
        android:background="@color/colorPrimary"
        android:layout_alignBottom="@+id/listText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/do_you_want_exit_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_yes"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_marginRight="5dp"/>

        <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_no"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>