<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_competitions_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dev.sigma77.mathematicexams.Competitions_name"
    tools:showIn="@layout/activity_competitions_name"
    android:gravity="center"
    android:weightSum="3"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:id="@+id/imageView"
        android:layout_weight="1"
        android:background="@drawable/pic_test"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:text="@string/_23_04_2016"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                style="@style/btnStyleGenoa"/>
            <Button
                android:text="@string/_18_04_2015"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                style="@style/btnStyledark_khaki"/>
            <Button
                android:text="@string/_12_04_2014"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                style="@style/btnStyleBlackpearl"/>

        <Button
            android:text="@string/_20_04_2013"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/btnStyleAcapulco"/>
            <Button
                android:text="@string/_22_04_2012"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                style="@style/btnStyleArsenic"/>
            <Button
                android:text="@string/_16_04_2011"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                style="@style/btnStyleWhiskey"/>



            <Button
                android:text="@string/_24_04_2010"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                style="@style/btnStylePaprika"/>
            <Button
                android:text="@string/_12_04_2008"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                style="@style/btnStyleOrange"/>
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button8"-->
                <!--style="@style/btnStylelivid_brown"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button9"-->
                <!--style="@style/btnStylemedium_wood"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button10"-->
                <!--style="@style/btnStyleopal"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button11"-->
                <!--style="@style/btnStyleOrange"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button12"-->
                <!--style="@style/btnStylepale_brown"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button13"-->
                <!--style="@style/btnStylePaprika"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button14"-->
                <!--style="@style/btnStyleSandrif"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button15"-->
                <!--style="@style/btnStyleShakes"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button16"-->
                <!--style="@style/btnStylesorbus"/>-->
            <!--<Button-->
                <!--android:text="Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/button17"-->
                <!--style="@style/btnStyleWhiskey"/>-->
        </LinearLayout>
    </ScrollView>


</LinearLayout>
